--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "sort-by": "^1.2.0",
     "styled-components": "^6.0.0-rc.1",
     "swiper": "^9.3.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
